_config.yml 수정2

--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   name             : "지혁's History"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I'm genius"
-  location         : "Somewhere"
+  location         : "처인구 능원리"
   email            :
   links:
     - label: "Email"
